# atriolum

./: .gitignore  Cargo.toml  LICENSE
crates/atriolum-cli/: Cargo.toml
crates/atriolum-cli/src/: main.rs
crates/atriolum-ingest/: Cargo.toml
crates/atriolum-ingest/src/: auth.rs  compress.rs  error.rs  lib.rs  limits.rs  processor.rs
crates/atriolum-protocol/: Cargo.toml
crates/atriolum-protocol/src/: auth.rs  check_in.rs  envelope.rs  error.rs  event.rs  lib.rs  logs.rs  session.rs  span.rs  types.rs
crates/atriolum-server/: Cargo.toml
crates/atriolum-server/src/: cli.rs  main.rs  minidump.rs  router.rs  ws.rs
crates/atriolum-server/tests/: integration_test.rs
crates/atriolum-store/: Cargo.toml
crates/atriolum-store/src/: error.rs  filesystem.rs  lib.rs  query.rs  store.rs
docs/: README.md  architecture.md  sdk-compatibility-analysis.md  sdk-compatibility.md  sentry-protocol.md
specs/: README.md  atriolum.allium  ingest.allium  protocol.allium  storage.allium
tests/: sdk_enhanced_test.py  sdk_test.py
