[workspace]
resolver = "2"
members = [
    "crates/atriolum-protocol",
    "crates/atriolum-store",
    "crates/atriolum-ingest",
    "crates/atriolum-server",
    "crates/atriolum-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/nzinfo/atriolum"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"

# Tower middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Compression
flate2 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
