[package]
name = "atriolum-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "atriolum-cli"
path = "src/main.rs"

[dependencies]
atriolum-protocol = { path = "../atriolum-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
comfy-table = "7"
colored = "3"
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1"
