[package]
name = "atriolum-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atriolum-protocol = { path = "../atriolum-protocol" }
atriolum-store = { path = "../atriolum-store" }
serde_json = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
