[package]
name = "atriolum-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "atriolum-server"
path = "src/main.rs"

[dependencies]
atriolum-protocol = { path = "../atriolum-protocol" }
atriolum-store = { path = "../atriolum-store" }
atriolum-ingest = { path = "../atriolum-ingest" }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = "0.26"
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
