[package]
name = "atriolum-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atriolum-protocol = { path = "../atriolum-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
